--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.4",
-    "react-router-dom": "^6.20.1",
-    "react-intersection-observer": "^9.5.3"
+    "react-router-dom": "^6.20.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
