Fix Contact Form Email Errors

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,15 @@
 VITE_SUPABASE_URL=your_supabase_project_url
 VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
 
-# Email Configuration (Set these in your Supabase Edge Function environment)
-RESEND_API_KEY=your_resend_api_key
-YOUR_EMAIL=your-email@example.com
+# Email Configuration (Set these in your Supabase Edge Function environment variables)
+# DO NOT set these in your local .env file - they must be configured in Supabase Dashboard
+# RESEND_API_KEY=your_resend_api_key
+# YOUR_EMAIL=your-email@example.com
+
+# Instructions for setting up email functionality:
+# 1. Go to your Supabase Dashboard
+# 2. Navigate to Edge Functions
+# 3. Select the 'send-contact-email' function
+# 4. Add these environment variables:
+#    - RESEND_API_KEY: Your Resend API key from https://resend.com
+#    - YOUR_EMAIL: The email address where you want to receive contact form submissions
