Contact Form Setup Guide with Resend and Supabase

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
 # Email Configuration (Set these in your Supabase Edge Function environment variables)
 # DO NOT set these in your local .env file - they must be configured in Supabase Dashboard
 # RESEND_API_KEY=your_resend_api_key
-# YOUR_EMAIL=your-email@example.com
+# YOUR_EMAIL=akonsmith1989@gil.com
 
 # Instructions for setting up email functionality:
 # 1. Go to your Supabase Dashboard
@@ -13,4 +13,8 @@ VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
 # 3. Select the 'send-contact-email' function
 # 4. Add these environment variables:
 #    - RESEND_API_KEY: Your Resend API key from https://resend.com
-#    - YOUR_EMAIL: The email address where you want to receive contact form submissions
+#    - YOUR_EMAIL: akonsmith1989@gil.com (where you want to receive contact form submissions)
+
+# Email Flow:
+# Notification Email: FROM sridhanu2004@gmail.com TO akonsmith1989@gil.com
+# Auto-reply Email: FROM sridhanu2004@gmail.com TO user's email address
